posiGen_FullsendBox/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business Account, PosiGen, Business Development, Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Referrees Accounts</relationshipLabel>
        <relationshipName>Referree</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Boarded_Date__c</fullName>
        <formula>Opportunity__r.Booking_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Boarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Boarding_Date__c</fullName>
        <label>Boarding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractSignedDate__c</fullName>
        <formula>Opportunity__r.Contracts_Signed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Date__c</fullName>
        <label>ContractSignedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EU_Complete__c</fullName>
        <formula>Opportunity__r.EU_Completed_Date__c</formula>
        <label>EU Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Card_Number__c</fullName>
        <inlineHelpText>What is the id number for the gift card?</inlineHelpText>
        <label>Gift Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Referrees Leads</relationshipLabel>
        <relationshipName>Referral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Mobile__c</fullName>
        <description>NewVoiceMedia click to dial Mobile Phone</description>
        <formula>IF( 
        LEN( MobilePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(MobilePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Campaign%20Member&quot;, 
                   MobilePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Mobile Phone</inlineHelpText>
        <label>NVM Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN( Phone )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=Campaign%20Member&quot;, 
                   Phone, &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Opp Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Referrees Opportunities</relationshipLabel>
        <relationshipName>Referral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PG_Revenue__c</fullName>
        <formula>Opportunity__r.ExpectedRevenue</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PVIInstallComplete__c</fullName>
        <formula>Opportunity__r.PVI_Placed_In_Service_Date__c</formula>
        <label>PVI Install Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PVI_Install_Date__c</fullName>
        <label>PVI Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pipeline_Stage__c</fullName>
        <formula>Opportunity__r.Pipeline_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferralCost__c</fullName>
        <formula>Campaign.AmountPerReferree__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReferralProgram__c</fullName>
        <formula>Campaign.Parent.Name</formula>
        <label>Referral Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who has has been referred by the campaign member.</inlineHelpText>
        <label>Referred Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <formula>CASESAFEID(Campaign.Referrer__c)</formula>
        <label>Referrer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reward_Choice__c</fullName>
        <inlineHelpText>What reward did the customer choose?</inlineHelpText>
        <label>Reward Choice</label>
        <picklist>
            <picklistValues>
                <fullName>$100 Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50 Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prize</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reward_Points__c</fullName>
        <inlineHelpText>How many Pure Reward Special Edition points has the customer earned?</inlineHelpText>
        <label>Reward Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>